--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "736ed7c0",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
        "4             99          99  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "3f87dde0",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "id": "dfddfc97",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "id": "f8fe990c",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "id": "24789182",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
        "141            NaN         NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "id": "e3b802c8",
    "metadata": {},
    "outputs": [
@@ -458,7 +458,7 @@
        "4           99.0        99.0          3  District  4635  3022020  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "id": "c2f24bb4",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
        "24649428"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "id": "975189c0",
    "metadata": {},
    "outputs": [],
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "id": "556b1c74",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
        "81.85579580976001"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "id": "8f563f49",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,7 @@
        "78.93053295099331"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "id": "5e104e5b",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "id": "e712a64b",
    "metadata": {},
    "outputs": [
@@ -594,7 +594,7 @@
        "39170"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "id": "f3254c73",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "id": "2a990509",
    "metadata": {},
    "outputs": [],
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "id": "6865d2ab",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
        "28939"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "id": "3cfba361",
    "metadata": {},
    "outputs": [
@@ -679,7 +679,7 @@
        "33158"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "id": "a328550a",
    "metadata": {},
    "outputs": [
@@ -701,7 +701,7 @@
        "74.76039164018704"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 59,
    "id": "c1f1a31a",
    "metadata": {},
    "outputs": [
@@ -727,7 +727,7 @@
        "85.6596657108166"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "id": "8affb3cd",
    "metadata": {},
    "outputs": [
@@ -752,7 +752,7 @@
        "64.85571830840374"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
    "id": "a06d78fa",
    "metadata": {},
    "outputs": [
@@ -833,7 +833,7 @@
        "0                  81.9           74.8              85.7              64.9  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 62,
    "id": "c56271ae",
    "metadata": {},
    "outputs": [],
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 63,
    "id": "b19f4a8c",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1053,7 @@
        "Griffin High School           97.138965          90.599455  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 64,
    "id": "ad60481f",
    "metadata": {},
    "outputs": [
@@ -1369,7 +1369,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 65,
    "id": "dc84b2d0",
    "metadata": {},
    "outputs": [
@@ -1396,7 +1396,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 66,
    "id": "a9e1b46e",
    "metadata": {},
    "outputs": [
@@ -1423,7 +1423,7 @@
        "1094"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 67,
    "id": "f852a258",
    "metadata": {},
    "outputs": [
@@ -1449,7 +1449,7 @@
        "1139"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1464,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 68,
    "id": "336d54b7",
    "metadata": {},
    "outputs": [
@@ -1474,7 +1474,7 @@
        "2233"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 69,
    "id": "fa96802d",
    "metadata": {},
    "outputs": [
@@ -1498,7 +1498,7 @@
        "93.18568994889267"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 70,
    "id": "41865c8d",
    "metadata": {},
    "outputs": [
@@ -1522,7 +1522,7 @@
        "97.01873935264055"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1536,7 +1536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 71,
    "id": "16b9f441",
    "metadata": {},
    "outputs": [
@@ -1546,7 +1546,7 @@
        "95.10221465076661"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1561,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 72,
    "id": "335bbf7c",
    "metadata": {},
    "outputs": [
@@ -1571,7 +1571,7 @@
        "93.18568994889267"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 73,
    "id": "3fdd7283",
    "metadata": {},
    "outputs": [
@@ -1594,7 +1594,7 @@
        "97.01873935264055"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 74,
    "id": "cbc8acc5",
    "metadata": {},
    "outputs": [
@@ -1617,7 +1617,7 @@
        "95.10221465076661"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 75,
    "id": "b84c855e",
    "metadata": {},
    "outputs": [
@@ -1921,7 +1921,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1942,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 76,
    "id": "1ac2775a",
    "metadata": {
     "scrolled": true
@@ -2075,7 +2075,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2089,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 77,
    "id": "f79d49c4",
    "metadata": {},
    "outputs": [
@@ -2220,7 +2220,7 @@
        "Rodriguez High School          80.220055          52.988247  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2244,7 +2244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 78,
    "id": "17358aa9",
    "metadata": {},
    "outputs": [],
@@ -2279,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 79,
    "id": "82037858",
    "metadata": {},
    "outputs": [
@@ -2367,7 +2367,7 @@
        "Griffin High School   83.369193  83.706897  84.288089  84.013699"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2385,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 80,
    "id": "1cbf7d46",
    "metadata": {},
    "outputs": [
@@ -2396,7 +2396,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [40]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Combine each Series for average reading scores by school into single data frame.\u001b[39;00m\n\u001b[1;32m      2\u001b[0m reading_scores_by_grade_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame({\n\u001b[0;32m----> 3\u001b[0m        \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m9th\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[43mninth_grade_avg_reading_scores\u001b[49m,\n\u001b[1;32m      4\u001b[0m        \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m10th\u001b[39m\u001b[38;5;124m\"\u001b[39m: tenth_grade_avg_reading_scores,\n\u001b[1;32m      5\u001b[0m        \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m11th\u001b[39m\u001b[38;5;124m\"\u001b[39m: eleventh_grade_avg_reading_scores,\n\u001b[1;32m      6\u001b[0m        \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m12th\u001b[39m\u001b[38;5;124m\"\u001b[39m: twelfth_grade_avg_reading_scores})\n",
+      "Input \u001b[0;32mIn [80]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Combine each Series for average reading scores by school into single data frame.\u001b[39;00m\n\u001b[1;32m      2\u001b[0m reading_scores_by_grade_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame({\n\u001b[0;32m----> 3\u001b[0m        \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m9th\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[43mninth_grade_avg_reading_scores\u001b[49m,\n\u001b[1;32m      4\u001b[0m        \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m10th\u001b[39m\u001b[38;5;124m\"\u001b[39m: tenth_grade_avg_reading_scores,\n\u001b[1;32m      5\u001b[0m        \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m11th\u001b[39m\u001b[38;5;124m\"\u001b[39m: eleventh_grade_avg_reading_scores,\n\u001b[1;32m      6\u001b[0m        \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m12th\u001b[39m\u001b[38;5;124m\"\u001b[39m: twelfth_grade_avg_reading_scores})\n",
       "\u001b[0;31mNameError\u001b[0m: name 'ninth_grade_avg_reading_scores' is not defined"
      ]
     }
@@ -3081,10 +3081,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "564e24fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39170</td>\n",
+       "      <td>24649428</td>\n",
+       "      <td>78.930533</td>\n",
+       "      <td>81.855796</td>\n",
+       "      <td>74.760392</td>\n",
+       "      <td>85.659666</td>\n",
+       "      <td>64.855718</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Schools  Total Students  Total Budget  Average Math Score  \\\n",
+       "0             15           39170      24649428           78.930533   \n",
+       "\n",
+       "   Average Reading Score  % Passing Math  % Passing Reading  % Overall Passing  \n",
+       "0              81.855796       74.760392          85.659666          64.855718  "
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Adding a list of values with keys to create a new DataFrame.\n",
     "district_summary_df = pd.DataFrame(\n",
