--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -2439,9 +2439,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 328,
    "id": "82037858",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2469,57 +2471,65 @@
        "      <th>11th</th>\n",
        "      <th>12th</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Rodriguez High School</th>\n",
-       "      <td>81.0</td>\n",
-       "      <td>80.6</td>\n",
-       "      <td>80.9</td>\n",
-       "      <td>80.4</td>\n",
+       "      <td>76.859966</td>\n",
+       "      <td>76.612500</td>\n",
+       "      <td>76.395626</td>\n",
+       "      <td>77.690748</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Shelton High School</th>\n",
-       "      <td>84.1</td>\n",
-       "      <td>83.4</td>\n",
-       "      <td>84.4</td>\n",
-       "      <td>82.8</td>\n",
+       "      <td>83.420755</td>\n",
+       "      <td>82.917411</td>\n",
+       "      <td>83.383495</td>\n",
+       "      <td>83.778976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Thomas High School</th>\n",
-       "      <td>83.7</td>\n",
-       "      <td>84.3</td>\n",
-       "      <td>83.6</td>\n",
-       "      <td>83.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>83.087886</td>\n",
+       "      <td>83.498795</td>\n",
+       "      <td>83.497041</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Wilson High School</th>\n",
-       "      <td>83.9</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>83.8</td>\n",
-       "      <td>84.3</td>\n",
+       "      <td>83.085578</td>\n",
+       "      <td>83.724422</td>\n",
+       "      <td>83.195326</td>\n",
+       "      <td>83.035794</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Wright High School</th>\n",
-       "      <td>83.8</td>\n",
-       "      <td>83.8</td>\n",
-       "      <td>84.2</td>\n",
-       "      <td>84.1</td>\n",
+       "      <td>83.264706</td>\n",
+       "      <td>84.010288</td>\n",
+       "      <td>83.836782</td>\n",
+       "      <td>83.644986</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        9th  10th  11th  12th\n",
-       "Rodriguez High School  81.0  80.6  80.9  80.4\n",
-       "Shelton High School    84.1  83.4  84.4  82.8\n",
-       "Thomas High School     83.7  84.3  83.6  83.8\n",
-       "Wilson High School     83.9  84.0  83.8  84.3\n",
-       "Wright High School     83.8  83.8  84.2  84.1"
+       "                             9th       10th       11th       12th\n",
+       "school_name                                                      \n",
+       "Rodriguez High School  76.859966  76.612500  76.395626  77.690748\n",
+       "Shelton High School    83.420755  82.917411  83.383495  83.778976\n",
+       "Thomas High School           NaN  83.087886  83.498795  83.497041\n",
+       "Wilson High School     83.085578  83.724422  83.195326  83.035794\n",
+       "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 328,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2532,7 +2542,7 @@
     "              \"11th\": eleventh_grade_math_scores,\n",
     "              \"12th\": twelfth_grade_math_scores})\n",
     "\n",
-    "reading_scores_by_grade.tail()"
+    "math_scores_by_grade.tail()"
    ]
   },
   {
